tests/errors/non-entrypoint-external.expect
cell: r
---CODE---
1
---STDERR---
Error: tests/errors/non-entrypoint-external.futil
5 |    @external r = std_reg(32);
  |    ^^^^^^^^^^^^^^^^^^^^^^^^^ Malformed Structure: Cell cannot be marked `@external` in non-entrypoint component
